--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Andhomework01"
         tools:targetApi="31">
         <activity
+            android:name=".activity.IntentHandlerActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.NewPostActivity"
             android:exported="false" />
         <activity
