--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -11,16 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Andhomework01"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name=".activity.IntentHandlerActivity"
-            android:exported="false" />
-        <activity
-            android:name=".fragment.NewPostFragment"
-            android:exported="false" />
-        <activity
-            android:name=".fragment.FeedFragment"
-            android:exported="true">
+            android:name=".activity.AppActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
